# TelegramGroupBot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
deploy/: install_release_bundle.sh  telegram_group_helper_bot.service
docs/superpowers/plans/: 2026-06-21-qc-analytics.md  2026-06-21-qc-message-count-stats.md  (+3 more)
scripts/: deploy_release.sh
skills/images-search/: SKILL.md
skills/news-search/: SKILL.md
skills/videos-search/: SKILL.md
src/: config.rs  main.rs  state.rs
src/acl/: mod.rs
src/agent/: hygiene.rs  mod.rs  policy.rs  prompt_scaffold.rs  runtime.rs  tools.rs  types.rs  workspace.rs
src/agents/: factcheck.rs  mod.rs  qc.rs  qc_topics.rs  step.rs  tldr.rs
src/db/: database.rs  mod.rs  models.rs  search.rs
src/handlers/: access.rs  agent.rs  codex_admin.rs  commands.rs  content.rs  media.rs  mod.rs  qa.rs  responses.rs
src/importer/: history.rs
src/llm/: analytics.rs  audit.rs  brave_image_search.rs  brave_search.rs  codex_image.rs  exa_search.rs  gemini.rs  img2_image.rs  jina_search.rs  media.rs  mod.rs  openai_codex.rs  openrouter.rs  responses_provider.rs  runtime_models.rs  third_party.rs  tool_prompts.rs  tool_runtime.rs  web_search.rs
src/rag/: client.rs
src/skills/: index.rs  loader.rs  mod.rs  select.rs  types.rs
src/tools/: core_filesystem.rs  core_shell.rs  cwd_uploader.rs  mod.rs  telegraph_extractor.rs  twitter_extractor.rs
src/utils/: http.rs  language.rs  logging.rs  mod.rs  progress.rs  telegram.rs  timing.rs
(+2 files in other folders)
